platform/kubernetes/production/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dataaggregator
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
