platform/kubernetes/production/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dataaggregator-backend
  namespace: dataaggregator
  labels:
    app.kubernetes.io/name: data-aggregator
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app: dataaggregator-backend
  ports:
    - name: http
      port: 8001
      targetPort: http
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: dataaggregator-frontend
  namespace: dataaggregator
  labels:
    app.kubernetes.io/name: data-aggregator
    app.kubernetes.io/component: frontend
spec:
  type: ClusterIP
  selector:
    app: dataaggregator-frontend
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
